--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ body {
     line-height: 24px;
     color: #3C3C3C;
 }
+.header-area, .about-area, .project-area {
+    overflow: hidden;
+}
+
 .head-text-area {
     margin-top: 20px;
 }
@@ -44,7 +48,7 @@ body {
     color: #FF8367;
 }
 .head-text-area p {
-    font-size: 22px;
+    font-size: 20px;
     line-height: 24px;
     color: #3E3E3E;
 }
@@ -78,4 +82,32 @@ body {
 }
 .about-area .image-area img {
     margin-top: -100px;
+}
+.about-area h3 {
+    color: #363958;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 48px;
+}
+.about-area .text-area {
+    font-size: 20px;
+    line-height: 24px;
+    color: #3E3E3E;
+}
+.project-area {
+    background-color: #F8F9FC;
+}
+.projects {
+    width: 20%;
+    float: left;
+    height: auto;
+    border: 2px white;
+    border-radius: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 6.5812px 19.7436px rgba(0, 0, 0, 0.07);
+    padding: 15px;
+    margin: 150px 10px;    
+}
+.projects img {
+    width: 100%;
 }
